# starsight_be

./: .gitignore  .pdm.toml  Dockerfile  manage.py  pyproject.toml
apps/articles/: models.py
apps/articles/migrations/: 0001_initial.py  0002_rename_caption_articledetailpage_credits_and_more.py  0003_remove_articledetailpage_credits_and_more.py
apps/home/: models.py
apps/home/migrations/: 0001_initial.py  0003_homepage_hero_image_homepage_hero_image_alt.py
apps/navigations/: admin.py  api.py  models.py
apps/navigations/migrations/: 0001_initial.py  0002_alter_links_id_alter_navigation_id.py
apps/streamfields/blocks/: __init__.py  text_and_images.py
services/: serializers.py  variables.py
starsight_be/: api.py  urls.py  wsgi.py
starsight_be/settings/: base.py  production.py
starsight_be/templates/: base.html
